<?xml version="1.0"?>
<package>
  <name>ros_ekf_cpp</name>
  <version>1.0.0</version>
  <description>ros_ekf_cpp package</description>

  <maintainer email="tndus5447@gmail.com">SuyeonKim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>  

  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>      
  
  <export></export>
</package>
