<?xml version="1.0"?>
<package>
  <name>tutorial</name>
  <version>1.0.0</version>
  <description>tutorial package</description>

  <maintainer email="kmjcr7@naver.com">kmj</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>autoware_msgs</run_depend>
  <run_depend>tf</run_depend>      
  
  <export></export>
</package>
